--- a/articles/iot-dps/toc.yml
+++ b/articles/iot-dps/toc.yml
@@ -29,7 +29,7 @@
               href: quick-create-simulated-device-x509.md
             - name: Java
               href: quick-create-simulated-device-x509-java.md
-            - name: 'C#'
+            - name: C#
               href: quick-create-simulated-device-x509-csharp.md
             - name: Node.js
               href: quick-create-simulated-device-x509-node.md
@@ -41,7 +41,7 @@
               href: quick-create-simulated-device.md
             - name: Java
               href: quick-create-simulated-device-tpm-java.md
-            - name: 'C#'
+            - name: C#
               href: quick-create-simulated-device-tpm-csharp.md
             - name: Node.js
               href: quick-create-simulated-device-tpm-node.md
@@ -53,7 +53,7 @@
           items:
             - name: Java
               href: quick-enroll-device-x509-java.md
-            - name: 'C#'
+            - name: C#
               href: quick-enroll-device-x509-csharp.md
             - name: Node.js
               href: quick-enroll-device-x509-node.md
@@ -63,7 +63,7 @@
           items:
             - name: Java
               href: quick-enroll-device-tpm-java.md
-            - name: 'C#'
+            - name: C#
               href: quick-enroll-device-tpm-csharp.md
             - name: Node.js
               href: quick-enroll-device-tpm-node.md
@@ -79,7 +79,7 @@
       items:
         - name: C
           href: tutorial-provision-device-to-hub.md
-        - name: 'C#'
+        - name: C#
           href: tutorial-net-provision-device-to-hub.md
     - name: 4 - デバイスを複数のハブにプロビジョニングする
       href: tutorial-provision-multiple-hubs.md
@@ -175,6 +175,8 @@
       href: 'https://github.com/Azure/azure-iot-sdk-java'
     - name: Azure IoT SDK for .NET
       href: 'https://github.com/Azure/azure-iot-sdk-csharp'
+    - name: Azure CLI
+      href: /cli/azure/azure-cli-reference-for-IoT
 - name: リソース
   items:
     - name: サポート オプションとヘルプ オプション
@@ -200,12 +202,12 @@
     - name: Azure IoT SDK
       items:
         - name: IoT サービスの SDK
-          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks'
+          href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks
         - name: IoT デバイス SDK
-          href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks'
+          href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks
     - name: Azure IoT サンプル
       items:
-        - name: 'C# (.NET)'
+        - name: C# (.NET)
           href: 'https://azure.microsoft.com/resources/samples/azure-iot-samples-csharp/'
         - name: Node.js
           href: 'https://azure.microsoft.com/resources/samples/azure-iot-samples-node/'
