--- a/articles/azure-portal/TOC.yml
+++ b/articles/azure-portal/TOC.yml
@@ -13,6 +13,7 @@
     - name: ポータルで VM を作成する
       href: ../virtual-machines/windows/quick-create-portal.md?toc=/azure/azure-portal/toc.json&bc=/azure/azure-portal/breadcrumb/toc.json
     - name: ダッシュボードを作成する - Resource Manager テンプレート
+      displayName: Resource Manager
       href: quick-create-template.md
 - name: 概念
   items:
