--- a/articles/iot-dps/toc.yml
+++ b/articles/iot-dps/toc.yml
@@ -23,6 +23,8 @@
               href: quick-create-simulated-device-symm-key.md
             - name: Java
               href: quick-create-simulated-device-symmetric-key-java.md
+            - name: Python
+              href: quick-create-device-symmetric-key-python.md
         - name: X.509 証明書の構成証明
           items:
             - name: C
@@ -93,7 +95,7 @@
       href: concepts-device-reprovision.md
     - name: デバイス
       href: concepts-device.md
-    - name: Security
+    - name: セキュリティ
       href: concepts-security.md
     - name: TLS サポート
       href: tls-support.md
