--- a/articles/virtual-wan/index.yml
+++ b/articles/virtual-wan/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: cherylmc
   ms.author: cherylmc
   ms.date: 05/08/2020
-  ms.openlocfilehash: 02385eaefec2ed095b0922d5b098139caf56daec
-  ms.sourcegitcommit: ac4a365a6c6ffa6b6a5fbca1b8f17fde87b4c05e
+  ms.openlocfilehash: 14336a28630e7a62a19e2b3a51934950cf12e2f8
+  ms.sourcegitcommit: 73ac360f37053a3321e8be23236b32d4f8fb30cf
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 05/10/2020
-  ms.locfileid: "83005462"
+  ms.lasthandoff: 06/30/2020
+  ms.locfileid: "85564031"
 landingContent:
 - title: Virtual WAN について
   linkLists:
@@ -41,15 +41,13 @@ landingContent:
       url: virtual-wan-point-to-site-portal.md
   - linkListType: how-to-guide
     links:
-    - text: 仮想ハブから NVA にトラフィックをルーティングする
-      url: virtual-wan-route-table-portal.md
     - text: Virtual WAN パートナーの自動化の構成
       url: virtual-wan-configure-automation-providers.md
   - linkListType: concept
     links:
     - text: IPsec 接続の既定のポリシー
       url: virtual-wan-ipsec.md
-- title: Architecture
+- title: アーキテクチャ
   linkLists:
   - linkListType: concept
     links:
