--- a/articles/firewall/toc.yml
+++ b/articles/firewall/toc.yml
@@ -58,6 +58,8 @@
       href: central-management.md
     - name: リモート作業のサポート
       href: remote-work-support.md
+    - name: ネットワーク規則内の FQDN
+      href: fqdn-filtering-network-rules.md
 - name: 操作方法ガイド
   items:
     - name: Azure PowerShell を使用したデプロイ
@@ -80,6 +82,10 @@
       href: create-ip-group.md
     - name: Windows Virtual Desktop の保護
       href: protect-windows-virtual-desktop.md
+    - name: Azure Kubernetes Service (AKS) の保護
+      href: protect-azure-kubernetes-service.md
+    - name: DNS の設定
+      href: dns-settings.md
 - name: リファレンス
   items:
     - name: Azure CLI
