--- a/articles/governance/policy/index.yml
+++ b/articles/governance/policy/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.collection: collection
   author: DCtheGeek
   ms.author: dacoulte
-  ms.date: 06/16/2020
-  ms.openlocfilehash: d3a25af9f7d8e16fbb008fd84aff6e29c57680da
-  ms.sourcegitcommit: 01cd19edb099d654198a6930cebd61cae9cb685b
+  ms.date: 06/29/2020
+  ms.openlocfilehash: c066c3a7cc5b8208a61962ce4f51f7eef4be192b
+  ms.sourcegitcommit: 73ac360f37053a3321e8be23236b32d4f8fb30cf
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 06/24/2020
-  ms.locfileid: "85321949"
+  ms.lasthandoff: 06/30/2020
+  ms.locfileid: "85549941"
 landingContent:
 - title: Azure Policy について
   linkLists:
@@ -39,11 +39,11 @@ landingContent:
     links:
     - text: ポリシーを割り当てる (ポータル)
       url: ./assign-policy-portal.md
-    - text: ポリシーを割り当てる (PowerShell)
-      url: ./assign-policy-powershell.md
     - text: ポリシーを割り当てる (Azure CLI)
       url: ./assign-policy-azurecli.md
-    - text: ポリシーを割り当てる (テンプレート)
+    - text: ポリシーを割り当てる (Azure PowerShell)
+      url: ./assign-policy-powershell.md
+    - text: ポリシーを割り当てる (ARM テンプレート)
       url: ./assign-policy-template.md
   - linkListType: tutorial
     links:
