--- a/articles/remote-rendering/index.yml
+++ b/articles/remote-rendering/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: florianborn71
   ms.author: flborn
   ms.date: 03/26/2020
-  ms.openlocfilehash: 265c4087dbb93bc429cf61ebbeab13dc18c83353
-  ms.sourcegitcommit: ad66392df535c370ba22d36a71e1bbc8b0eedbe3
+  ms.openlocfilehash: e740fd08dc3e616b0768c6c15fd4191cb58e261a
+  ms.sourcegitcommit: 73ac360f37053a3321e8be23236b32d4f8fb30cf
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 06/16/2020
-  ms.locfileid: "84808943"
+  ms.lasthandoff: 06/30/2020
+  ms.locfileid: "85565435"
 landingContent:
 - title: Azure Remote Rendering について
   linkLists:
@@ -36,7 +36,7 @@ landingContent:
       url: concepts/sessions.md
     - text: エンティティ
       url: concepts/entities.md
-    - text: Components
+    - text: コンポーネント
       url: concepts/components.md
     - text: モデル
       url: concepts/models.md
@@ -60,11 +60,19 @@ landingContent:
   linkLists:
   - linkListType: tutorial
     links:
-    - text: Unity:プロジェクトをゼロから設定する
-      url: tutorials/unity/project-setup.md
-    - text: Unity:リモート エンティティを操作する
-      url: tutorials/unity/working-with-remote-entities.md
-    - text: Unity:環境と素材を変更する
-      url: tutorials/unity/changing-environment-and-materials.md
+    - text: 概要
+      url: tutorials/unity/tutorial-landing.md
+    - text: リモートでレンダリングされたモデルの表示
+      url: tutorials/unity/view-remote-models/view-remote-models.md
+    - text: カスタム モデルの読み込み
+      url: tutorials/unity/custom-models/custom-models.md
+    - text: モデルの操作
+      url: tutorials/unity/manipulate-models/manipulate-models.md
+    - text: 素材、ライト、および効果の調整
+      url: tutorials/unity/materials-lighting-effects/materials-lighting-effects.md
+    - text: Azure Remote Rendering とモデル ストレージのセキュリティ保護
+      url: tutorials/unity/security/security.md
+    - text: 商用の Azure Remote Rendering アプリケーションの作成
+      url: tutorials/unity/commercial-ready/commercial-ready.md
     - text: 'ネイティブ C++: Remote Rendering を HoloLens Holographic アプリに統合する'
       url: tutorials/native-cpp/hololens/integrate-remote-rendering-into-holographic-app.md
