--- a/articles/active-directory/manage-apps/toc.yml
+++ b/articles/active-directory/manage-apps/toc.yml
@@ -3,20 +3,14 @@
 - name: 概要
   expanded: true
   items:
-    - name: クラウド アプリの管理とシングル サインオンとは
+    - name: アプリケーション管理とは
       href: what-is-application-management.md
-    - name: オンプレミス アプリ用のアプリケーション プロキシとは
-      href: what-is-application-proxy.md
-    - name: 一般的なアプリ管理シナリオ
-      href: common-scenarios.md
-    - name: アプリケーションのプロビジョニングとは
-      href: /azure/active-directory/app-provisioning/user-provisioning?context=azure/active-directory/manage-apps/context/manage-apps-context
 - name: クイックスタート
   items:
-    - name: ギャラリーからのクラウド アプリの追加
-      href: add-application-portal.md
     - name: エンタープライズ アプリケーションの表示
       href: view-applications-portal.md
+    - name: ギャラリーからのクラウド アプリの追加
+      href: add-application-portal.md
 - name: チュートリアル
   items:
     - name: 統合されたギャラリー アプリ (ServiceNow、Salesforce、Dropbox など)
@@ -32,6 +26,8 @@
   items:
     - name: アプリ管理のベスト プラクティス
       href: application-management-fundamentals.md
+    - name: 一般的なアプリ管理シナリオ
+      href: common-scenarios.md
     - name: クラウド アプリとシングル サインオン
       items:
         - name: クラウド アプリの統合の計画
@@ -80,13 +76,15 @@
       items:
         - name: アプリケーション プロキシ
           href: application-proxy.md
+        - name: オンプレミス アプリ用のアプリケーション プロキシとは
+          href: what-is-application-proxy.md
         - name: アプリケーション プロキシのデプロイ計画
           href: application-proxy-deployment-plan.md
         - name: Connectors
           href: application-proxy-connectors.md
         - name: コネクタ グループ
           href: application-proxy-connector-groups.md
-        - name: Security
+        - name: セキュリティ
           href: application-proxy-security.md
         - name: ネットワーク トポロジ
           href: application-proxy-network-topology.md
