--- a/articles/advisor/toc.yml
+++ b/articles/advisor/toc.yml
@@ -4,6 +4,14 @@
   items:
     - name: Azure Advisor とは
       href: advisor-overview.md
+- name: クイックスタート
+  items:
+    - name: 新しい推奨事項のアラートの構成
+      items:
+        - name: Azure portal
+          href: advisor-alerts-portal.md
+        - name: ARM テンプレート
+          href: advisor-alerts-arm.md
 - name: チュートリアル
   items:
     - name: Advisor の使用を開始する
@@ -25,7 +33,7 @@
     - name: アクセス許可とブロックされるアクション
       href: permissions.md
     - name: 推奨事項のアラートの構成
-      href: advisor-alerts.md
+      href: advisor-alerts-portal.md
     - name: 推奨事項の一括修復
       href: advisor-quick-fix.md
     - name: Azure Resource Graph の Advisor データ
