--- a/articles/batch/TOC.yml
+++ b/articles/batch/TOC.yml
@@ -49,7 +49,7 @@
       href: ./policy-samples.md
 - name: 概念
   items:
-    - name: Security
+    - name: セキュリティ
       items:
         - name: セキュリティ ベースライン
           href: security-baseline.md
@@ -135,6 +135,8 @@
           href: batch-virtual-network.md
         - name: パブリック IP アドレスのプールを作成する
           href: create-pool-public-ip.md
+        - name: パブリック IP アドレスのないプールを作成する
+          href: batch-pool-no-public-ip-address.md
         - name: 仮想ファイル システムをマウントする
           href: virtual-file-mount.md
         - name: Azure ファイル共有をマウントする
