--- a/articles/firewall-manager/index.yml
+++ b/articles/firewall-manager/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: vhorne
   ms.author: victorh
   ms.date: 10/10/2019
-  ms.openlocfilehash: e3b98f3954ee70b5e002bb844147d4d51b1f6d9d
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: bf7474f1519fbd94be3de8daa15a43775a6a6a0a
+  ms.sourcegitcommit: 73ac360f37053a3321e8be23236b32d4f8fb30cf
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "73508671"
+  ms.lasthandoff: 06/30/2020
+  ms.locfileid: "85561424"
 landingContent:
 - title: Azure Firewall Manager について
   linkLists:
@@ -31,15 +31,15 @@ landingContent:
     links:
     - text: セキュリティ保護付き仮想ハブとは
       url: secured-virtual-hub.md
-- title: 信頼されたセキュリティ パートナー
+- title: セキュリティ パートナー プロバイダー
   linkLists:
   - linkListType: concept
     links:
-    - text: 信頼されたセキュリティ パートナー (プレビュー) とは
+    - text: セキュリティ パートナー プロバイダーとは
       url: trusted-security-partners.md
   - linkListType: how-to-guide
     links:
-    - text: 信頼されたセキュリティ パートナー (プレビュー) のデプロイ
+    - text: セキュリティ パートナー プロバイダーのデプロイ
       url: deploy-trusted-security-partner.md
 - title: Azure クラウド ネットワークのセキュリティ保護
   linkLists:
