--- a/articles/firewall-manager/toc.yml
+++ b/articles/firewall-manager/toc.yml
@@ -12,7 +12,7 @@
       href: quick-secure-virtual-hub.md
 - name: チュートリアル
   items:
-    - name: 仮想 WAN のセキュリティ保護 - ポータル
+    - name: 仮想ハブのセキュリティ保護 - ポータル
       href: secure-cloud-network.md
     - name: ハブ仮想ネットワークのセキュリティ保護 - ポータル
       href: secure-hybrid-network.md
@@ -26,16 +26,24 @@
       href: deployment-overview.md
     - name: セキュリティ パートナー プロバイダー
       href: trusted-security-partners.md
+    - name: IP グループ
+      href: ip-groups.md
     - name: ルール処理ロジック
       href: rule-processing.md
     - name: アーキテクチャ オプション
       href: vhubs-and-vnets.md
+    - name: 脅威インテリジェンスの設定
+      href: threat-intelligence-settings.md
+    - name: ネットワーク規則内の FQDN
+      href: fqdn-filtering-network-rules.md
 - name: 操作方法ガイド
   items:
     - name: セキュリティ パートナー プロバイダーのデプロイ
       href: deploy-trusted-security-partner.md
     - name: ファイアウォール ポリシーへの移行 - PowerShell
       href: migrate-to-policy.md
+    - name: DNS の設定
+      href: dns-settings.md
 - name: リファレンス
   items:
     - name: Azure CLI
