--- a/articles/governance/resource-graph/toc.yml
+++ b/articles/governance/resource-graph/toc.yml
@@ -8,7 +8,7 @@
 - name: クイックスタート
   expanded: true
   items:
-    - name: 最初のクエリを実行する - Azure portal
+    - name: 最初のクエリを実行する - ポータル
       displayName: 'portal, resource, graph, explorer'
       href: ./first-query-portal.md
     - name: 最初のクエリを実行する - Azure CLI
@@ -26,6 +26,9 @@
     - name: 最初のクエリを実行する - Python
       displayName: 'library, azure-mgmt, cli'
       href: ./first-query-python.md
+    - name: 共有クエリを作成する - Azure CLI
+      displayName: 'extension, docker, queries'
+      href: ./shared-query-azure-cli.md
     - name: 共有クエリをデプロイする - ARM テンプレート
       displayName: 'resource manager, queries'
       href: ./shared-query-template.md
