--- a/articles/key-vault/general/toc.yml
+++ b/articles/key-vault/general/toc.yml
@@ -27,6 +27,8 @@
       href: tutorial-net-create-vault-azure-web-app.md
 - name: サンプル
   items:
+    - name: Key Vault のコード サンプル
+      href: 'https://docs.microsoft.com/samples/browse/?expanded=azure&products=azure-key-vault'
     - name: Azure Policy の組み込み
       displayName: 'samples, policies, definitions'
       href: ../policy-samples.md?toc=/azure/key-vault/general/toc.json&bc=/azure/key-vault/breadcrumb/toc.json
@@ -34,7 +36,7 @@
   items:
     - name: 基本的な概念
       href: basic-concepts.md
-    - name: Security
+    - name: セキュリティ
       items:
         - name: Azure Key Vault セキュリティ
           href: overview-security.md
