--- a/articles/marketplace/TOC.yml
+++ b/articles/marketplace/TOC.yml
@@ -73,193 +73,6 @@
               href: ./marketplace-faq-publisher-guide.md
             - name: 利用可能な地域と通貨
               href: ./marketplace-geo-availability-currencies.md
-- name: クラウド パートナー ポータル
-  href: ./cloud-partner-portal-orig/cloud-partner-portal-getting-started-with-the-cloud-partner-portal.md
-  items:
-    - name: ポータル ツアー
-      href: ./cloud-partner-portal/portal-tour/cpp-portal-tour.md
-      items:
-        - name: ポータルのナビゲーション
-          href: ./cloud-partner-portal/portal-tour/cpp-portal-navigation.md
-        - name: '[新しいプラン] メニュー'
-          href: ./cloud-partner-portal/portal-tour/cpp-new-offer-menu.md
-        - name: '[すべてのプラン] ページ'
-          href: ./cloud-partner-portal/portal-tour/cpp-all-offers-page.md
-        - name: '[承認] ページ'
-          href: ./cloud-partner-portal/portal-tour/cpp-approvals-page.md
-        - name: '[すべての発行元] ページ'
-          href: ./cloud-partner-portal/portal-tour/cpp-all-publishers-page.md
-        - name: '[ユーザー] ページ'
-          href: ./cloud-partner-portal/portal-tour/cpp-users-page.md
-        - name: '[監査履歴] ページ'
-          href: ./cloud-partner-portal/portal-tour/cpp-history-page.md
-        - name: '[Insights]\(インサイト\) ページ'
-          href: ./cloud-partner-portal/portal-tour/cpp-insights-page.md
-    - name: ポータル管理
-      href: ./cloud-partner-portal/portal-manage/cpp-portal-management.md
-      items:
-        - name: アカウントを管理するための前提条件
-          href: ./cloud-partner-portal/portal-manage/cpp-manage-prerequisites.md
-        - name: 発行元プロファイルの管理
-          href: ./cloud-partner-portal/portal-manage/cpp-manage-publisher-profile.md
-        - name: ユーザーの管理
-          href: ./cloud-partner-portal/portal-manage/cpp-manage-users.md
-    - name: ビジネス管理
-      items:
-        - name: SEO ガイダンス
-          href: ./cloud-partner-portal-orig/cloud-partner-portal-seo-guidance.md
-        - name: GDPR コンプライアンス
-          href: ./cloud-partner-portal-orig/cloud-partner-portal-gdpr.md
-        - name: プライベート SKU
-          href: ./cloud-partner-portal-orig/cloud-partner-portal-azure-private-skus.md
-        - name: リードの管理
-          items:
-            - name: 潜在顧客の構成
-              href: ./cloud-partner-portal-orig/cloud-partner-portal-get-customer-leads.md
-            - name: Azure テーブル
-              href: ./cloud-partner-portal-orig/cloud-partner-portal-lead-management-instructions-azure-table.md
-            - name: Dynamics
-              href: ./cloud-partner-portal-orig/cloud-partner-portal-lead-management-instructions-dynamics.md
-            - name: HTTPS エンドポイント
-              href: ./cloud-partner-portal-orig/cloud-partner-portal-lead-management-instructions-https.md
-            - name: Marketo
-              href: ./cloud-partner-portal-orig/cloud-partner-portal-lead-management-instructions-marketo.md
-            - name: Salesforce
-              href: ./cloud-partner-portal-orig/cloud-partner-portal-lead-management-instructions-salesforce.md
-        - name: Seller Insights
-          items:
-            - name: 作業の開始
-              href: ./cloud-partner-portal-orig/si-getting-started.md
-            - name: Web 分析
-              href: ./cloud-partner-portal-orig/web-analytics.md
-            - name: 定義
-              href: ./cloud-partner-portal-orig/si-insights-definitions-v4.md
-            - name: Insights の FAQ
-              href: ./cloud-partner-portal-orig/si-faqs.md
-    - name: Marketplace のオファー
-      href: ./cloud-partner-portal/cpp-marketplace-offers.md
-      items:
-        - name: オファーの管理
-          href: ./cloud-partner-portal/manage-offers/cpp-manage-offers.md
-          items:
-            - name: オファーを作成する
-              href: ./cloud-partner-portal/manage-offers/cpp-create-offer.md
-            - name: オファーの発行
-              href: ./cloud-partner-portal/manage-offers/cpp-publish-offer.md
-            - name: オファーの状態の確認
-              href: ./cloud-partner-portal/manage-offers/cpp-view-status-offer.md
-            - name: オファーの更新
-              href: ./cloud-partner-portal/manage-offers/cpp-update-offer.md
-            - name: オファーの削除
-              href: ./cloud-partner-portal/manage-offers/cpp-delete-offer.md
-        - name: 体験版
-          items:
-            - name: 体験版とは
-              href: ./cloud-partner-portal/test-drive/what-is-test-drive.md
-            - name: Azure Resource Manager の体験版
-              href: ./cloud-partner-portal/test-drive/azure-resource-manager-test-drive.md
-            - name: ホストされた体験版
-              href: ./cloud-partner-portal/test-drive/hosted-test-drive.md
-            - name: ロジック アプリの体験版
-              href: ./cloud-partner-portal/test-drive/logic-app-test-drive.md
-            - name: 体験版の変換の例
-              href: ./cloud-partner-portal/test-drive/transforming-examples-for-test-drive.md
-            - name: マーケティングとベスト プラクティス
-              href: ./cloud-partner-portal/test-drive/marketing-and-best-practices.md
-        - name: Azure アプリケーション プラン
-          href: ./cloud-partner-portal/azure-applications/cpp-azure-app-offer.md
-          items:
-            - name: 前提条件
-              href: ./cloud-partner-portal/azure-applications/cpp-prerequisites.md
-            - name: Azure アプリケーション オファーの作成
-              href: ./cloud-partner-portal/azure-applications/cpp-create-offer.md
-              items:
-                - name: '[プランの設定] タブ'
-                  href: ./cloud-partner-portal/azure-applications/cpp-offer-settings-tab.md
-                - name: '[SKU] タブ'
-                  href: ./cloud-partner-portal/azure-applications/cpp-skus-tab.md
-                - name: '[体験版] タブ'
-                  href: ./cloud-partner-portal/azure-applications/cpp-testdrive-tab.md
-                - name: '[Marketplace] タブ'
-                  href: ./cloud-partner-portal/azure-applications/cpp-marketplace-tab.md
-                - name: '[サポート] タブ'
-                  href: ./cloud-partner-portal/azure-applications/cpp-support-tab.md
-            - name: 技術資産の作成
-              href: ./cloud-partner-portal/azure-applications/cpp-create-technical-assets.md
-            - name: Azure アプリケーション オファーを公開する
-              href: ./cloud-partner-portal/azure-applications/cpp-publish-offer.md
-            - name: レビュー フィードバックの処理
-              href: ./cloud-partner-portal/azure-applications/cpp-handling-review-feedback.md
-            - name: 既存のオファーの更新
-              href: ./cloud-partner-portal/azure-applications/cpp-update-existing-offer.md
-        - name: コンサルティング サービス
-          href: ./cloud-partner-portal/consulting-services/consulting-services-offer.md
-        - name: Containers のオファー
-          href: ./cloud-partner-portal/containers/cpp-containers-offer.md
-        - name: Dynamics 365 for Business Central のオファー
-          href: ./cloud-partner-portal-orig/cpp-business-central-offer.md
-          items:
-            - name: 発行の概要
-              href: ./cloud-partner-portal-orig/d365-finance-overview-publish-your-app.md
-            - name: 新しいオファーを作成する
-              href: ./cloud-partner-portal-orig/d365-finance-create-new-offer.md
-            - name: プラン設定
-              href: ./cloud-partner-portal-orig/d365-finance-create-offer-settings.md
-            - name: 技術的な詳細
-              href: ./cloud-partner-portal-orig/d365-finance-create-offer-technical-details.md
-            - name: ネットショップの詳細
-              href: ./cloud-partner-portal-orig/d365-finance-create-storefront-details.md
-            - name: 発行プロセス
-              href: ./cloud-partner-portal-orig/d365-finance-app-publishing-process.md
-        - name: Dynamics 365 for Customer Engagement プラン
-          href: ./cloud-partner-portal/dyn365ce/cpp-customer-engagement-offer.md
-          items:
-            - name: 前提条件
-              href: ./cloud-partner-portal/dyn365ce/cpp-prerequisites.md
-            - name: Customer Engagement オファーの作成
-              href: ./cloud-partner-portal/dyn365ce/cpp-create-offer.md
-              items:
-                - name: '[プランの設定] タブ'
-                  href: ./cloud-partner-portal/dyn365ce/cpp-offer-settings-tab.md
-                - name: '[技術情報] タブ'
-                  href: ./cloud-partner-portal/dyn365ce/cpp-technical-info-tab.md
-                - name: '[体験版] タブ'
-                  href: ./cloud-partner-portal/dyn365ce/cpp-testdrive-tab.md
-                - name: '[ネットショップの詳細] タブ'
-                  href: ./cloud-partner-portal/dyn365ce/cpp-storefront-details-tab.md
-                - name: '[連絡先] タブ'
-                  href: ./cloud-partner-portal/dyn365ce/cpp-contacts-tab.md
-            - name: Customer Engagement 技術資産の作成
-              href: ./cloud-partner-portal/dyn365ce/cpp-create-technical-assets.md
-            - name: Customer Engagement オファーの発行
-              href: ./cloud-partner-portal/dyn365ce/cpp-publish-offer.md
-        - name: Dynamics 365 for Operations オファー
-          href: ./cloud-partner-portal-orig/cpp-dynamics-365-operations-offer.md
-          items:
-            - name: 前提条件
-              href: ./cloud-partner-portal-orig/pre-requisites.md
-            - name: 発行方法
-              href: ./cloud-partner-portal-orig/manage-dynamics-365-for-operations.md
-            - name: LCS サブスクリプション
-              href: ./cloud-partner-portal-orig/lcs-subscription.md
-            - name: コードのアップグレード
-              href: ./cloud-partner-portal-orig/code-upgrade.md
-            - name: データ エンティティ
-              href: ./cloud-partner-portal-orig/data-entities.md
-            - name: BPM と手法
-              href: ./cloud-partner-portal-orig/bpm-and-methodologies.md
-            - name: ヘルプ Wiki
-              href: ./cloud-partner-portal-orig/help-wiki.md
-        - name: IoT Edge モジュール オファー
-          href: ./cloud-partner-portal/iot-edge-module/iot-edge-module-offer.md
-        - name: Power BI アプリ オファー
-          href: ./cloud-partner-portal/power-bi/cpp-power-bi-offer.md
-        - name: SaaS アプリケーション オファー
-          href: ./cloud-partner-portal/saas-app/cpp-saas-offer.md
-        - name: 仮想マシンのオファー
-          href: ./cloud-partner-portal/virtual-machine/cpp-virtual-machine-offer.md
-    - name: サポートの利用
-      href: ./cloud-partner-portal-orig/cloud-partner-portal-support-for-cloud-partner-portal.md
 - name: パートナー センターのコマーシャル マーケットプレース
   items:
     - name: コマーシャル マーケットプレースの概要
@@ -388,8 +201,14 @@
               href: ./partner-center-portal/marketplace-metering-service-apis.md
             - name: Marketplace の測定サービス API - FAQ
               href: ./partner-center-portal/marketplace-metering-service-apis-faq.md
-        - name: オファーの体験版を設定する
-          href: ./partner-center-portal/test-drive.md
+        - name: 体験版
+          items:
+            - name: 体験版とは
+              href: ./what-is-test-drive.md
+            - name: 体験版の技術的な構成
+              href: ./test-drive-technical-configuration.md
+            - name: Azure Resource Manager の体験版
+              href: ./azure-resource-manager-test-drive.md
         - name: 共同販売オプション
           href: ./partner-center-portal/commercial-marketplace-co-sell.md
           items:
