--- a/articles/migrate/toc.yml
+++ b/articles/migrate/toc.yml
@@ -86,8 +86,10 @@
       href: hyper-v-migration-architecture.md
     - name: エージェントベースの VMware 移行のアーキテクチャ
       href: agent-based-migration-architecture.md
-    - name: 評価の概要
+    - name: Azure VM の評価の概要
       href: concepts-assessment-calculation.md
+    - name: AVS の評価の概要
+      href: concepts-azure-vmware-solution-assessment-calculation.md
     - name: 評価のベスト プラクティス
       href: best-practices-assessment.md
     - name: 依存関係の分析の概要
@@ -124,8 +126,10 @@
       href: how-to-create-group-machine-dependencies.md
     - name: マシンの依存関係の分析 (エージェントレス)
       href: how-to-create-group-machine-dependencies-agentless.md
-    - name: 評価を作成する
+    - name: Azure VM の評価を作成する
       href: how-to-create-assessment.md
+    - name: AVS の評価を作成する
+      href: how-to-create-azure-vmware-solution-assessment.md
     - name: SQL Server データベースにアクセスする
       href: 'https://docs.microsoft.com/sql/dma/dma-assess-sql-data-estate-to-sqldb'
     - name: 評価のカスタマイズ
