--- a/articles/remote-rendering/tutorials/unity/toc.yml
+++ b/articles/remote-rendering/tutorials/unity/toc.yml
@@ -1,6 +1,14 @@
-- name: Unity プロジェクトをゼロから設定する
-  href: project-setup.md
-- name: Unity でリモート エンティティを操作する
-  href: working-with-remote-entities.md
-- name: 環境と素材を変更する
-  href: changing-environment-and-materials.md
+- name: 概要
+  href: tutorial-landing.md
+- name: リモートでレンダリングされたモデルの表示
+  href: view-remote-models/view-remote-models.md
+- name: インターフェイスとカスタム モデル
+  href: custom-models/custom-models.md
+- name: モデルの操作
+  href: manipulate-models/manipulate-models.md
+- name: 素材、ライト、および効果の調整
+  href: materials-lighting-effects/materials-lighting-effects.md
+- name: Azure Remote Rendering とモデル ストレージのセキュリティ保護
+  href: security/security.md
+- name: 商用の Azure Remote Rendering アプリケーションの作成
+  href: commercial-ready/commercial-ready.md
