--- a/articles/virtual-machines/troubleshooting/toc.yml
+++ b/articles/virtual-machines/troubleshooting/toc.yml
@@ -103,6 +103,8 @@
           href: unresponsive-vm-apply-group-policy.md
         - name: セキュリティ ポリシーの適用時に VM が応答しない
           href: unresponsive-vm-apply-security-policy.md
+        - name: Windows STOP エラー - メモリなし状態
+          href: troubleshoot-windows-stop-error.md
 - name: VM に接続できない
   items:
     - name: RDP
