--- a/articles/virtual-wan/TOC.yml
+++ b/articles/virtual-wan/TOC.yml
@@ -4,7 +4,7 @@
   items:
     - name: Virtual WAN について
       href: virtual-wan-about.md
-    - name: Architecture
+    - name: アーキテクチャ
       items:
         - name: Virtual WAN に移行する
           href: migrate-from-hub-spoke-topology.md
@@ -36,6 +36,30 @@
           href: virtual-wan-locations-partners.md
         - name: パートナー向けの自動化ガイドライン
           href: virtual-wan-configure-automation-providers.md
+    - name: 価格の概念
+      href: pricing-concepts.md
+    - name: ルーティング
+      items:
+        - name: 仮想ハブのルーティングについて
+          href: about-virtual-hub-routing.md
+        - name: シナリオ
+          items:
+            - name: 任意の環境間
+              href: scenario-any-to-any.md
+            - name: VNet の分離
+              href: scenario-isolate-vnets.md
+            - name: VNet の分離 - カスタム
+              href: scenario-isolate-vnets-custom.md
+            - name: 共有サービスの VNet
+              href: scenario-shared-services-vnet.md
+            - name: NVA 経由のルーティング
+              href: scenario-route-through-nva.md
+            - name: NVA 経由のルーティング - カスタム (プレビュー)
+              href: scenario-route-through-nvas-custom.md
+            - name: Azure Firewall - Interhub (プレビュー)
+              href: scenario-route-between-hubs-firewall.md
+            - name: Azure Firewall - カスタム
+              href: scenario-route-between-vnets-firewall.md
     - name: サイト間
       items:
         - name: IPsec ポリシーについて
@@ -44,8 +68,6 @@
           href: path-selection-multiple-links.md
 - name: 操作方法ガイド
   items:
-    - name: グローバル VNet ピアリングを構成する
-      href: global-peering-vnet.md
     - name: Virtual WAN SKU をアップグレードする
       href: upgrade-virtual-wan.md
     - name: ExpressRoute
@@ -90,15 +112,11 @@
           href: openvpn-azure-ad-tenant-multi-app.md
     - name: ルーティング
       items:
-        - name: 仮想ハブから NVA にトラフィックをルーティングする
-          items:
-            - name: Azure portal
-              href: virtual-wan-route-table-portal.md
-            - name: Azure PowerShell
-              href: virtual-wan-route-table.md
-        - name: 仮想ハブの有効なルートを表示する
+        - name: 仮想ハブのルーティングを構成する方法
+          href: how-to-virtual-hub-routing.md
+        - name: 仮想ハブの有効なルートを表示する方法
           href: effective-routes-virtual-hub.md
-    - name: Security
+    - name: セキュリティ
       items:
         - name: Azure Firewall をハブにデプロイする
           href: howto-firewall.md
