--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -172,6 +172,9 @@
               href: how-to-change-storage-access-key.md
             - name: Azure Firewall の使用
               href: how-to-access-azureml-behind-firewall.md
+            - name: 安全なコーディング
+              href: concept-secure-code-best-practice.md
+              displayName: security threat
         - name: 認証の設定
           displayName: 'authentication, auth, oauth'
           href: how-to-setup-authentication.md
@@ -314,6 +317,8 @@
             - name: 自動化された ML モデルの説明
               displayName: 'SDK, interpret, interpret, explain, explanability, interpretability, automated ML, automl, auto ml'
               href: how-to-machine-learning-interpretability-automl.md
+        - name: モデルの公平性を評価して軽減する
+          href: how-to-machine-learning-fairness-aml.md
         - name: トレーニング時に Key Vault を使用する
           displayName: secrets keyvault
           href: how-to-use-secrets-in-runs.md
