--- a/articles/lighthouse/toc.yml
+++ b/articles/lighthouse/toc.yml
@@ -82,23 +82,23 @@
 - name: リファレンス
   items:
     - name: Azure CLI
-      href: 'https://docs.microsoft.com/cli/azure/managedservices?view=azure-cli-latest'
+      href: /cli/azure/managedservices?view=azure-cli-latest
     - name: Azure PowerShell
-      href: 'https://docs.microsoft.com/powershell/module/az.managedservices/?view=azps-2.4.0#managed_services'
+      href: /powershell/module/az.managedservices/?view=azps-2.4.0#managed_services
     - name: Azure SDK for .NET
-      href: 'https://docs.microsoft.com/dotnet/api/Microsoft.Azure.Management.ManagedServices?view=azure-dotnet'
+      href: /dotnet/api/Microsoft.Azure.Management.ManagedServices?view=azure-dotnet
     - name: Azure SDK for .NET (NuGet)
       href: 'https://www.nuget.org/packages/Microsoft.Azure.Management.ManagedServices/'
     - name: Azure SDK for Python
-      href: 'https://docs.microsoft.com/python/api/azure-mgmt-managedservices'
+      href: /python/api/azure-mgmt-managedservices
     - name: REST
-      href: 'https://docs.microsoft.com/rest/api/managedservices/'
+      href: /rest/api/managedservices/
     - name: OpenAPI
       href: 'https://github.com/Azure/azure-rest-api-specs/tree/master/specification/managedservices/resource-manager/Microsoft.ManagedServices/preview/2018-06-01-preview'
 - name: リソース
   items:
     - name: Azure Lighthouse 用の Microsoft Q&A
-      href: 'https://docs.microsoft.com/en-us/answers/topics/azure-lighthouse.html'
+      href: /answers/topics/azure-lighthouse.html
     - name: Azure のロードマップ
       href: 'https://azure.microsoft.com/roadmap/'
     - name: 料金計算ツール
