--- a/articles/advisor/toc.yml
+++ b/articles/advisor/toc.yml
@@ -11,6 +11,7 @@
         - name: Azure portal
           href: advisor-alerts-portal.md
         - name: ARM テンプレート
+          displayName: Resource Manager
           href: advisor-alerts-arm.md
 - name: チュートリアル
   items:
