--- a/articles/storage/tables/TOC.yml
+++ b/articles/storage/tables/TOC.yml
@@ -1,5 +1,5 @@
 - name: Azure Table Storage のドキュメント
-  href: /azure/storage/
+  href: /azure/storage/tables/
 - name: 概要
   expanded: true
   items:
@@ -17,7 +17,7 @@
     - name: .NET
       href: /azure/cosmos-db/table-storage-how-to-use-dotnet
       maintainContext: true
-    - name: 'F#'
+    - name: F#
       href: 'https://docs.microsoft.com/dotnet/articles/fsharp/using-fsharp-on-azure/table-storage'
       maintainContext: true
     - name: Java
@@ -45,7 +45,7 @@
   items:
     - name: ストレージ アカウント
       href: ../common/storage-account-overview.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
-    - name: Security
+    - name: セキュリティ
       items:
         - name: セキュリティ ベースライン
           href: ../common/security-baseline.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
